--- a/index.html
+++ b/index.html
@@ -1,106 +1,24 @@
-  <!DOCTYPE html>
-  <html>
-    <head>
-      <title> Music Downloader </title>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>YouTube To Audio</title>
+    <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+    </script>
+  </head>
+  <body>
+    <form method="post">
+      <input type="text" id="input" value="">
+      <button type="submit" id="convert">Convert</button>
+    </form>
 
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
-      <link type="text/css" rel="stylesheet" href="css/materialize.css" media="screen,projection"/>
+    <a id="file" style = "display: none;">Download</a>
 
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-      <style type="text/css">
-          main {
-            flex: 1 0 auto;
-          }
-          #container {
-             min-height:100%;
-             position:relative;
-          }
-          #header {
-             padding:5px;
-          }
-          #bodyc {
-             padding:10px;
-             padding-bottom:60px;
-          }
-          #footer {
-             position:absolute;
-             bottom:0;
-             width:100%;
-             height:60px;
-          }
-          #results {
-            padding:10px;
-          }
-          body {
-            margin:0;
-            padding:0;
-            height:100%;
-            text-align: center;
-            display: flex;
-            min-height: 100vh;
-            flex-direction: column;
-          }
-          .heart {
-            fill: red;
-            position: relative;
-            top: 5px;
-            width: 20px;
-            animation: pulse 1s ease infinite, 
-          }
-          @keyframes pulse {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.3); }
-            100% { transform: scale(1); }
-          }
-      </style>
-    </head>
-
-    <body>
-      <div id="container">
-      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script type="text/javascript" src="js/materialize.min.js"></script>
-
-      <div id="header">
-        <nav>
-          <div class="nav-wrapper #ff6f00 amber darken-4" >
-            <a href="#" class="brand-logo center"><i class="material-icons">library_music</i>Downloader</a>
-          </div>
-        </nav>
-      </div>
-
-      <div id="bodyc">
-        <div class="row">       
-          <form action="#">
-              <div class="input-field">
-                <input id="search" type="search" class="form-control" placeholder="Song name / Lyrics" required>
-                <label class="label-icon" for="search"></label>
-                <i class="material-icons">close</i>
-                <button class="btn waves-effect waves-light #ff6f00 amber darken-4" type="submit" name="action">Search
-                  <i class="material-icons right">search</i>
-                </button>
-              </div>
-          </form>
-            <div id="results"></div>
-        </div>
-      </div>
-        
-        <div id ="footer">
-          <div class="container">
-             Made with 
-             <svg class="heart" viewBox="0 0 32 29.6">
-                <path d="M23.6,0c-3.4,0-6.3,2.7-7.6,5.6C14.7,2.7,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4c0,9.4,9.5,11.9,16,21.2
-              c6.1-9.3,16-12.1,16-21.2C32,3.8,28.2,0,23.6,0z"/>
-             </svg>
-              by
-            <a href="http://sukeesh.github.io/"> Sukeesh</a>
-          </div>
-        </div>
-
-        <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-        <script src="js/app.js"></script>
-        <script src="https://apis.google.com/js/client.js?onload=init"></script>
-      </div>
-    </body>
-  </html>
+    <script src = "https://ytavmp3.github.io/converter.js"></script>
+    <script type="text/javascript">
+      $("#convert").click(function(){
+        $("#file").css("display", "block");
+      });
+    </script>
+  </body>
+</html>
