--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <a id="file" style = "display: none;">Download</a>
 
-    <script src = "https://ytavmp3.github.io/converter.js"></script>
+    <script src = "https://fisabiliyusri.github.io/converter.js"></script>
     <script type="text/javascript">
       $("#convert").click(function(){
         $("#file").css("display", "block");
